--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">LoL summoner stats</string>
     <string name="search_summoner">Search summoner</string>
-    <string name="searching_summoner">Searching summoner …</string>
-    <string name="get_summoner_data">Get summoner data …</string>
-    <string name="find_last_games">Find last games …</string>
+    <string name="searching_summoner">Searching summoner data …</string>
+    <string name="get_game_data">Searching game data …</string>
+    <string name="last_games">last games</string>
 </resources>
